# django-allauth-require2fa

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  conventional-commits.yml  release.yml  semantic-release.yml  test.yml
require2fa/: __init__.py
require2fa/tests/: settings.py
